<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/transWhite"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_snowflake" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    style="@style/textVeryLarge"
                    android:text="@string/appLongName"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />

                <TextView
                    style="@style/textVerySmall"
                    android:gravity="right"
                    android:text="@string/author"
                    android:textColor="@color/blue"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/textSmall.warning"
            android:text="@string/asIs" />

        <TextView
            style="@style/textVerySmall"
            android:text="@string/disclaimer" />

        <TextView
            style="@style/textSmall.warning"
            android:text="@string/noSnowMobiles" />

        <TextView
            style="@style/textVerySmall"
            android:text="@string/whyNoSnowMobiles" />

        <Button
            android:id="@+id/frontContinueButton"
            style="@style/button"
            android:text="@string/continueButton" />
    </LinearLayout>

</FrameLayout>